Add: add discription to lwc component

--- a/remics-test1/force-app/main/default/lwc/donationCreationLwc/donationCreationLwc.html
+++ b/remics-test1/force-app/main/default/lwc/donationCreationLwc/donationCreationLwc.html
@@ -1,4 +1,5 @@
 <template>
+    <!-- 献金登録画面 -->
     <!-- 献金者検索フォーム -->
     <lightning-card title="献金者の検索" class="slds-p-horizontal_small">
         <div class="slds-m-around_medium">
