--- a/remics-test1/force-app/main/default/lwc/shuhoDataPrint/shuhoDataPrint.html
+++ b/remics-test1/force-app/main/default/lwc/shuhoDataPrint/shuhoDataPrint.html
@@ -1,4 +1,5 @@
 <template>
+    <!-- 週報原稿データ作成画面 -->
     <!-- 納入期間指定フォーム -->
     <lightning-card title="納入期間の指定" class="slds-p-horizontal_small">
         <div class="slds-m-around_medium">
