--- a/remics-test1/force-app/main/default/lwc/sokaishikaku/sokaishikaku.html
+++ b/remics-test1/force-app/main/default/lwc/sokaishikaku/sokaishikaku.html
@@ -1,4 +1,5 @@
 <template>
+    <!-- 総会議員資格者情報 更新画面 -->
     <!-- 判定対象期間指定フォーム -->
     <lightning-card title="判定対象期間の指定" class="slds-p-horizontal_small">
         <div class="slds-m-around_medium">
