Fix: rename of ShotenshaWorshipSurvivorList

--- a/remics-test1/force-app/main/default/lwc/shotenshaWorshipSurvivorList/shotenshaWorshipSurvivorList.html
+++ b/remics-test1/force-app/main/default/lwc/shotenshaWorshipSurvivorList/shotenshaWorshipSurvivorList.html
@@ -1,5 +1,5 @@
 <template>
-    <!-- 遺族宛案内者抽出画面 -->
+    <!-- 召天者記念礼拝リスト作成画面 -->
     <!-- 検索日付入力フォーム -->
     <lightning-card title="検索日付の指定" class="slds-p-horizontal_small">
         <div class="slds-m-around_medium">
