Fix: modify unnatural margin

--- a/remics-test1/force-app/main/default/lwc/shotenshaWorshipSurvivorList/shotenshaWorshipSurvivorList.html
+++ b/remics-test1/force-app/main/default/lwc/shotenshaWorshipSurvivorList/shotenshaWorshipSurvivorList.html
@@ -1,7 +1,7 @@
 <template>
     <!-- 召天者記念礼拝リスト作成画面 -->
     <!-- 検索日付入力フォーム -->
-    <lightning-card title="検索日付の指定" class="slds-p-horizontal_small">
+    <lightning-card title="検索日付の指定">
         <div class="slds-m-around_medium">
             <lightning-record-edit-form>
                 <lightning-messages></lightning-messages>
