--- a/remics-test1/force-app/main/default/lwc/sokaishikaku/sokaishikaku.html
+++ b/remics-test1/force-app/main/default/lwc/sokaishikaku/sokaishikaku.html
@@ -1,7 +1,7 @@
 <template>
     <!-- 総会議員資格者情報 更新画面 -->
     <!-- 判定対象期間指定フォーム -->
-    <lightning-card title="判定対象期間の指定" class="slds-p-horizontal_small">
+    <lightning-card title="判定対象期間の指定">
         <div class="slds-m-around_medium">
             <lightning-messages></lightning-messages>
             <div class="slds-grid">
