--- a/remics-test1/force-app/main/default/lwc/donationCreationLwc/donationCreationLwc.html
+++ b/remics-test1/force-app/main/default/lwc/donationCreationLwc/donationCreationLwc.html
@@ -13,10 +13,10 @@
                         <lightning-input-field field-name={donorNameField} value={donorId} variant="label-stacked" tabindex=-1 onchange={onChangeDonorNameField}></lightning-input-field>
                     </div>
                     <div class="slds-col slds-size_1-of-6">
-                        <lightning-input type="number" name="donationTypeNum" label="献金種類" variant="label-stacked" onblur={onChangeDonationTypeNumField}></lightning-input>
+                        <lightning-input label="週報BOX番号" value={boxNum} variant="label-stacked" tabindex=-1 disabled></lightning-input>
                     </div>
                     <div class="slds-col slds-size_1-of-6">
-                        <lightning-input-field field-name={donationTypeField} value={donationTypeVal} variant="label-stacked" tabindex=-1 ></lightning-input-field>
+                        <lightning-input label="棚番号" value={shelfNum} variant="label-stacked" tabindex=-1 disabled></lightning-input>
                     </div>
                     <div class="slds-col slds-size_1-of-6">
                         <lightning-input-field field-name={donationDateField} variant="label-stacked" tabindex=-1 ></lightning-input-field>
@@ -24,6 +24,13 @@
                     <div class="slds-col slds-size_1-of-6">
                     </div>
 
+
+                    <div class="slds-col slds-size_1-of-6">
+                        <lightning-input type="number" name="donationTypeNum" label="献金種類" variant="label-stacked" onblur={onChangeDonationTypeNumField}></lightning-input>
+                    </div>
+                    <div class="slds-col slds-size_1-of-6">
+                        <lightning-input-field field-name={donationTypeField} value={donationTypeVal} variant="label-stacked" tabindex=-1 ></lightning-input-field>
+                    </div>
                     <div class="slds-col slds-size_1-of-6">
                         <lightning-input-field field-name={donationStartdateField} variant="label-stacked" class="donationStartdate" onchange={onChangeDonationStartOrFinishdate}></lightning-input-field>
                     </div>
