Change: english comment to japanese

--- a/remics/force-app/main/default/lwc/customDataTable/customDataTable.html
+++ b/remics/force-app/main/default/lwc/customDataTable/customDataTable.html
@@ -1,4 +1,5 @@
 <template>
+    <!-- [ https://live.playg.app/play/picklist-in-lightning-datatable ]を参考に作成 -->
     <c-datatable-picklist label={typeAttributes.label} value={typeAttributes.value}
         placeholder={typeAttributes.placeholder} options={typeAttributes.options} context={typeAttributes.context}>
     </c-datatable-picklist>
