--- a/remics/force-app/main/default/lwc/datatablePicklist/datatablePicklist.html
+++ b/remics/force-app/main/default/lwc/datatablePicklist/datatablePicklist.html
@@ -1,4 +1,5 @@
 <template>
+    <!-- [ https://live.playg.app/play/picklist-in-lightning-datatable ]を参考に作成 -->
     <div class="picklist-container">
         <lightning-combobox name="picklist" label={label} value={value} placeholder={placeholder} options={options} onchange={handleChange}></lightning-combobox>
     </div>
