--- a/remics/force-app/main/default/lwc/journalExport/journalExport.html
+++ b/remics/force-app/main/default/lwc/journalExport/journalExport.html
@@ -1,5 +1,5 @@
 <template>
-    <!-- Journal Data Export Page -->
+    <!-- 仕訳データエクスポート画面 -->
     <lightning-card title="エクスポートする献金データの指定" >
         <div class="slds-m-around_medium">
             <lightning-record-edit-form>
@@ -38,7 +38,7 @@
         </div>
     </lightning-card>
 
-    <!-- Journal Data "KAIKEI_IF" List -->
+    <!-- 仕訳データ「KAIKEI_IF」 一覧 -->
     <lightning-card title="仕訳データ「KAIKEI_IF」 一覧" class="slds-p-horizontal_small" if:true={kaikeiData}>
         <lightning-button label="ダウンロード" title="表のデータをCSVダウンロード" onclick={exportKaikeiCsv} class="slds-m-left_x-small" ></lightning-button>
 
@@ -54,7 +54,7 @@
         </div>
     </lightning-card>
 
-    <!-- Journal Data "SIEN_IF" List -->
+    <!-- 仕訳データ「SIEN_IF」 一覧 -->
     <lightning-card title="仕訳データ「SIEN_IF」 一覧" class="slds-p-horizontal_small" if:true={sienData}>
         <lightning-button label="ダウンロード" title="表のデータをCSVダウンロード" onclick={exportSienCsv} class="slds-m-left_x-small" ></lightning-button>
 
