--- a/remics/force-app/main/default/lwc/sokaishikaku/sokaishikaku.html
+++ b/remics/force-app/main/default/lwc/sokaishikaku/sokaishikaku.html
@@ -15,7 +15,7 @@
         </div>
     </lightning-card>
 
-    <!-- Qualified Person Candidate List -->
+    <!-- 総会議員資格 候補者一覧表 -->
     <lightning-card title="総会議員資格 候補者一覧表" class="slds-p-horizontal_small" if:true={qualifiedPersonData}>
         <div class="slds-m-around_medium">
             <lightning-datatable
