--- a/remics/force-app/main/default/lwc/donationCreationLwc/donationCreationLwc.html
+++ b/remics/force-app/main/default/lwc/donationCreationLwc/donationCreationLwc.html
@@ -13,6 +13,9 @@
                         <lightning-input-field field-name={donorNameField} value={donorId} variant="label-stacked" tabindex=-1 onchange={onChangeDonorNameField}></lightning-input-field>
                     </div>
                     <div class="slds-col slds-size_1-of-6">
+                        <lightning-input label="献金単位区分" value={donationUnitClass} variant="label-stacked" tabindex=-1 disabled></lightning-input>
+                    </div>
+                    <div class="slds-col slds-size_1-of-6">
                         <lightning-input label="週報BOX番号" value={boxNum} variant="label-stacked" tabindex=-1 disabled></lightning-input>
                     </div>
                     <div class="slds-col slds-size_1-of-6">
@@ -20,8 +23,6 @@
                     </div>
                     <div class="slds-col slds-size_1-of-6">
                         <lightning-input-field field-name={donationDateField} variant="label-stacked" tabindex=-1 ></lightning-input-field>
-                    </div>
-                    <div class="slds-col slds-size_1-of-6">
                     </div>
 
 
